fixed search bug css bugs on small sc

--- a/src/index.css
+++ b/src/index.css
@@ -477,12 +477,14 @@ body {
 .user-cocktails {
   position: fixed;
   top: 0;
-  left: 0;
+  bottom: 0;
+  margin-top: 5rem;
   width: 100vw;
   background-color: transparent;
   z-index: -5;
-  margin-top: 5rem;
   transition: var(--transition);
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 .user-cocktails-show {
   background-color: rgba(0, 0, 0, 0.7);
@@ -490,10 +492,10 @@ body {
 }
 .userCocktails-container {
   padding-top: 3rem;
-  position: relative;
   background-color: var(--clr-prim1);
   max-width: 600px;
   min-height: 100vh;
+  bottom: 0;
   transform: translateX(-100%);
   transition: var(--transition);
 }
@@ -502,7 +504,7 @@ body {
 }
 .user-cocktail {
   display: grid;
-  grid-template-columns: auto 1fr 1fr auto;
+  grid-template-columns: auto 1fr auto;
   text-align: center;
   align-items: center;
   justify-content: center;
@@ -512,13 +514,27 @@ body {
   border-bottom: 2px solid var(--clr-black);
   border-top: 2px solid var(--clr-black);
 }
+.user-list {
+  padding: 0 0.5rem;
+  overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
+  overflow-y: scroll;
+  /* background-color: red */
+}
 .user-cocktail-img {
   width: 120px;
   height: 120px;
   border-radius: 50%;
 }
+.user-cocktail .user-cocktail-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
 .user-cocktail p {
-  font-size: 1.6rem;
+  font-size: 1rem;
   font-weight: bolder;
   letter-spacing: var(--spacing2);
   color: var(--clr-prim9);
